css/style.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;700&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import url(animate.css);

html {
  scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
    font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: #161616;
}

.disable {
  animation-play-state: paused !important;

  -o-transition-property: none !important;
  -moz-transition-property: none !important;
  -ms-transition-property: none !important;
  -webkit-transition-property: none !important;
  transition-property: none !important;
}

/* Page Loader */
#loader-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
}

#loader {
  display: block;
  position: relative;
  top: 50%;
  text-align: center;

  z-index: 1001;
}

#loader span{
  display: inline-block;
  width: 5px;
  height: 20px;
  background-color: limegreen;
}

#loader span:nth-child(1){
  animation: grow 1.5s ease-in-out infinite;
}

#loader span:nth-child(2){
  animation: grow 1.5s ease-in-out 0.15s infinite;
}

#loader span:nth-child(3){
  animation: grow 1.5s ease-in-out 0.30s infinite;
}

#loader span:nth-child(4){
  animation: grow 1.5s ease-in-out 0.45s infinite;
}

#loader span:nth-child(5){
  animation: grow 1.5s ease-in-out 0.60s infinite;
}

#loader-wrapper .loader-section {
    position: fixed;
    width: 100%;
    height: 100%;
    background: #222222;
    z-index: 1000;
    -webkit-transform: translateY(0);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateY(0);  /* IE 9 */
    transform: translateY(0);  /* Firefox 16+, IE 10+, Opera */
}

#loader-wrapper .loader-section.section-top {
    top: 0;
}

#loader-wrapper .loader-section.section-bottom {
    bottom: 0;
}

/* Loaded */
.loaded #loader-wrapper .loader-section.section-top {
    -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: translateY(-100%);  /* IE 9 */
            transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */

    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
            transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}

.loaded #loader-wrapper .loader-section.section-bottom {
    -webkit-transform: translateY(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: translateY(100%);  /* IE 9 */
            transform: translateY(100%);  /* Firefox 16+, IE 10+, Opera */

    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
      transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}

.loaded #loader {
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;  
            transition: all 0.3s ease-out;
}
.loaded #loader-wrapper {
    visibility: hidden;

    -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: translateX(-100%);  /* IE 9 */
            transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */

    -webkit-transition: all 0.3s 1s ease-out;  
            transition: all 0.3s 1s ease-out;
}
  
/* JavaScript Turned Off */
.no-js #loader-wrapper {
    display: none;
}

/* Nav */
.navbar {
  font-family: 'Baloo Da 2', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  letter-spacing: .1rem;
  animation-name: topDown;
  animation-duration: 1s;
}

.navbar-brand {
  font-size: 1.5rem;
}

.navbar-nav li {
  padding-right: .7rem;
}

.navbar-toggler {
  border: none;
  background: transparent;
}

.navbar-toggler:focus {
  outline: none;
  background: transparent;
}

.navbar-toggler .icon-bar {
  background-color: #161616;
  transition: ease all .2s;
  display: block;
  width: 22px;
  height: 2px;
  border-radius: 1px;
  margin-top: 4px;
}

.navbar-toggler .middle-bar {
  width: 16px;
  transition: ease all .2s;
}

.navbar-toggler .top-bar {
  transform: rotate(45deg);
  transform-origin: 10% 10%;
}
 
.navbar-toggler .middle-bar {
  opacity: 0;
}
 
.navbar-toggler .bottom-bar {
  transform: rotate(-45deg);
  transform-origin: 10% 90%;
}

.navbar-toggler:hover>.middle-bar,
.navbar-toggler.active>.middle-bar {
  width: 22px;
}

.navbar-toggler:hover>.icon-bar,
.navbar-toggler.active>.icon-bar {
  background-color: limegreen;
}
 
.navbar-toggler.collapsed .top-bar {
  transform: rotate(0);
}
 
.navbar-toggler.collapsed .middle-bar {
  opacity: 1;
}
 
.navbar-toggler.collapsed .bottom-bar {
  transform: rotate(0);
}

@media (max-width: 991px) {
  .navbar {
    background-color: white;
  }

  #mainNav .navbar-brand,
  #mainNav .navbar-nav .nav-item .nav-link,
  #mainNav .navbar-nav .nav-item .nav-link .fa-github,
  #mainNav .navbar-nav .nav-item .nav-link .fa-linkedin {
    color: #161616;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active,
  #mainNav .navbar-nav .nav-item .nav-link:hover,
  #mainNav .navbar-nav .nav-item .nav-link .fa-github:hover,
  #mainNav .navbar-nav .nav-item .nav-link .fa-linkedin:hover {
    color: limegreen;
  }
}
/* ... */

